kubernetes/apps/base/media/arr/lidarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.${cluster_domain}`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
