kubernetes/apps/base/media/arr/lidarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.${cluster_domain}`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
